--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -1,3 +1,27 @@
-<nav>
-    <h2>{{title}}</h2>
+<nav class=" shadow-sm px-5 py-3 flex items-center bg-sky-400 justify-between">
+    <!-- Logo -->
+    <div class="text-2xl font-bold tracking-wide">
+        Task Manager
+    </div>
+
+    <!-- Desktop Menu -->
+    <ul class="hidden md:flex gap-8 text-gray-700 font-medium">
+        <li><a class="hover:text-white transition" href="#">Dashboard</a></li>
+        <li><a class="hover:text-white transition" href="#">Employees</a></li>
+        <li><a class="hover:text-white transition" href="#">Departments</a></li>
+        <li><a class="hover:text-white transition" href="#">Reports</a></li>
+    </ul>
+
+    <!-- Mobile Button -->
+    <button class="md:hidden cursor-pointer text-gray-700 text-3xl p-2 rounded-md transition" (click)="toggleMenu()">
+        ☰
+    </button>
 </nav>
+
+<!-- Mobile Dropdown -->
+<div class="md:hidden bg-sky-300 shadow-lg  overflow-hidden transition-all" [ngClass]="{ 'hidden': !isMenuOpen }">
+    <a href="#" class="block px-5 py-3 hover:text-white">Dashboard</a>
+    <a href="#" class="block px-5 py-3 hover:text-white">Employees</a>
+    <a href="#" class="block px-5 py-3 hover:text-white">Departments</a>
+    <a href="#" class="block px-5 py-3 hover:text-white">Reports</a>
+</div>
