--- a/src/app/components/edit-todo-component/edit-todo-component.html
+++ b/src/app/components/edit-todo-component/edit-todo-component.html
@@ -1,4 +1,4 @@
-<div class=" w-full flex mt-4 gap-3 justify-center">
+<div class="w-full p-2 flex flex-col md:flex-row mt-4 gap-3 justify-center">
     <input class=" border border-gray-300 rounded-lg px-3 py-2 text-grey-900 focus:outline-none focus:border-blue-500"
         type="text" [(ngModel)]="title" placeholder="Task title" />
     <input class="border border-gray-300 rounded-lg px-3 py-2 text-grey-900 focus:outline-none focus:border-blue-500"
