--- a/src/app/components/todo-list-component/todo-list-component.html
+++ b/src/app/components/todo-list-component/todo-list-component.html
@@ -8,7 +8,7 @@
         Setting</button>
 </div>
 
-<table *ngIf="tasks.length" class="w-full border-grey-200 rounded-lg border">
+<table *ngIf="tasks.length" class="w-full rounded-lg">
     <thead class="bg-gray-200 text-left text-grey-700">
         <tr>
             <th class="py-3 px-4">Task Name</th>
