angular material for snackbar

--- a/src/app/components/todo-list-component/todo-list-component.html
+++ b/src/app/components/todo-list-component/todo-list-component.html
@@ -36,7 +36,7 @@
     <div class="w-full mt-8 flex items-center text-center justify-center">
         <div class="rounded-lg bg-sky-100 px-4 py-8 text-lg">
             No Task Available...<br>
-            Click on Add Button to add task
+            Click on Add Task Button
         </div>
     </div>
 </div>
