animate on scroll added

--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -9,7 +9,7 @@
         <li><a class="hover:text-white transition" href="#">Dashboard</a></li>
         <li><a class="hover:text-white transition" href="#">Employees</a></li>
         <li><a class="hover:text-white transition" href="#">Departments</a></li>
-        <li><a class="hover:text-white transition" href="#">Reports</a></li>
+        <li><a href="infscroll" class="hover:text-white transition" href="#">Infinite</a></li>
     </ul>
 
     <!-- Mobile Button -->
@@ -23,5 +23,5 @@
     <a href="#" class="block px-5 py-3 hover:text-white">Dashboard</a>
     <a href="#" class="block px-5 py-3 hover:text-white">Employees</a>
     <a href="#" class="block px-5 py-3 hover:text-white">Departments</a>
-    <a href="#" class="block px-5 py-3 hover:text-white">Reports</a>
+    <a href="infscroll" class="block px-5 py-3 hover:text-white">Infinite</a>
 </div>
