--- a/src/app/components/navbar-component/navbar-component.html
+++ b/src/app/components/navbar-component/navbar-component.html
@@ -9,7 +9,7 @@
         <li><a class="hover:text-white transition" href="#">Dashboard</a></li>
         <li><a class="hover:text-white transition" href="#">Employees</a></li>
         <li><a class="hover:text-white transition" href="#">Departments</a></li>
-        <li><a href="infscroll" class="hover:text-white transition" href="#">Infinite</a></li>
+        <li><a class="hover:text-white transition" href="infscroll">Infinite</a></li>
     </ul>
 
     <!-- Mobile Button -->
