converted web app to android app

--- a/src/app/components/infinite-scroll/infinite-scroll.html
+++ b/src/app/components/infinite-scroll/infinite-scroll.html
@@ -1,6 +1,6 @@
 @defer{
 @for (item of items; track $index;let i=$index) {
-<div [attr.data-aos]="i%2==0 ? 'fade-right':'fade-left'" data-aos-duration="1000"
+<div [attr.data-aos]="i%2==0 ? 'fade-up':'fade-up'" data-aos-duration="1000"
     class="bg-green-400 m-2 rounded-md px-2 py-2">
     <p><span class="text-lg">Title</span> : {{item.title}}</p>
     <p><span class="text-lg">Body</span> : {{item.body}}</p>
